--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "node index.js",
-        "start": "node index.js"
+        "start": "node index.js",
+        "release": "npm version patch && npm publish"
 
     },
     "repository": {
