--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     },
     "keywords": [
         "search",
-        "apk downloader"
+        "apk downloader",
+        "apdl"
 
     ],
     "dependencies": {
