--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "node index.js",
         "start": "node index.js",
-        "release": "npm version patch && git push origin main --tags && npm publish --access public"
+        "release": "npm version patch && npm publish"
     },
     "repository": {
         "type": "git",
