--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aptoide-api",
-    "version": "4.0.1",
+    "version": "4.0.4",
     "description": "Search and get download apk",
     "main": "index.js",
     "scripts": {
@@ -20,9 +20,7 @@
 
     ],
     "dependencies": {
-        "cheerio": "^1.0.0-rc.10",
-        "node-fetch": "^3.3.0"
-
+            "axios": "^1.8.3"
     },
     "author": "naxordeve (https://github.com/naxordeve)",
     "npm_publisher": "Diegoson",
